# QuanLiKhoHang_kinhitumadam

./: README.md
TRADING-GOD/: CMakeLists.txt
TRADING-GOD/data/: DataTaiSan.cpp  DataTaiSan.h
TRADING-GOD/src/: main.cpp
TRADING-GOD/src/Controller/: AppController.cpp  AppController.h  noi_thua_lo.cpp  noi_thua_lo.h
TRADING-GOD/src/Model/: Exception.cpp  Exception.h  LongOrder.cpp  LongOrder.h  Order.cpp  Order.h  ShortOrder.cpp  ShortOrder.h  Trade.cpp  Trade.h  Vidientu.cpp  Vidientu.h  server.cpp  server.h
TRADING-GOD/src/View/: giaodien.cpp  giaodien.h
code/: CMakeLists.txt  Employee.cpp  Employee.h  FulfillmentCenter.cpp  FulfillmentCenter.h  Product.cpp  Product.h  Service.cpp  Service.h  Supplier.cpp  Supplier.h  main.cpp
